@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.22387 2022/12/04 17:40:49 adam Exp $
+$NetBSD: TODO,v 1.22388 2022/12/04 22:12:07 wiz Exp $
 
 Suggested new packages
 ======================
@@ -976,7 +976,6 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o maelstrom-x11-2.0.7
 	o magento-2.4.1
 	o magic-8.3.309
-	o magit-3.0
 	o mailman-3.3.5
 	o mailutis-2.2 [wip]
 	o maketool-0.8.4
